--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1",
     "react-router": "^7.1.5",
     "tailwindcss": "^4.0.4"
   },
