--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1",
     "react-router": "^7.1.5",
+    "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
