--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ app/__pycache__
 app/database/__pycache__
 app/slack/__pycache__
 app/api/__pycache__
+app/utils/__pycache__
 app/scheduler/__pycache__
 .env
 app/.env
