--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -2,16 +2,22 @@ server {
     listen 80;
     server_name localhost;
 
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header X-Content-Type-Options "nosniff" always;
+
     root /usr/share/nginx/html;
     index index.html;
 
     location / {
         try_files $uri $uri/ /index.html;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     error_page 404 /index.html;
 
     location = /index.html {
+        add_header Cache-Control "no-store, no-cache, must-revalidate";
         allow all;
         access_log off;
         log_not_found off;
